<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/goMovie"
        android:orderInCategory="50"
        android:icon="@drawable/movieicon"
        app:showAsAction="always|collapseActionView"
        android:title="@string/movie"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item android:id="@+id/goBus"
        android:orderInCategory="50"
        android:icon="@drawable/busicon"
        app:showAsAction="always|collapseActionView"
        android:title="@string/bus"/>

    <item android:id="@+id/goSoccer"
        android:orderInCategory="50"
        android:icon="@drawable/soccericon"
        app:showAsAction="always|collapseActionView"
        android:title="@string/soccer"/>

    <item android:id="@+id/goCar"
        android:orderInCategory="50"
        android:icon="@drawable/caricon"
        app:showAsAction="always|collapseActionView"
        android:title="@string/car"/>

</menu>