<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout_Charg"
    >

<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CarMainActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/cartoolbar"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Longitudetext"
            android:textColor="#090909"
            app:layout_constraintStart_toStartOf="@+id/longitudeTextField"
            app:layout_constraintTop_toBottomOf="@+id/cartoolbar" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitudetext"
            android:textColor="#090909"
            app:layout_constraintStart_toStartOf="@+id/cartoolbar"
            app:layout_constraintTop_toBottomOf="@+id/cartoolbar" />

        <EditText
            android:id="@+id/latitudeTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/latitude_input"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitude" />

        <EditText
            android:id="@+id/longitudeTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/Longitude_input"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longitude" />


        <Button
            android:id="@+id/finderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/charg_searchBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitudeTextField" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chargingrecycler"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finderButton" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/charg_popout_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/charg_popout_header"
        app:menu="@menu/charging_finder_activity_actions"/>


    </androidx.drawerlayout.widget.DrawerLayout>