<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MovieMainActivity"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fragmentMovie">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movieName_message"
                    app:layout_constraintStart_toStartOf="@+id/movieTextField"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/movieTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movie_hint_message"
                    app:layout_constraintTop_toBottomOf="@+id/textView"/>

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movieSearchButton"
                    app:layout_constraintTop_toBottomOf="@+id/movieTextField"/>

                <FrameLayout
                    android:id="@+id/searchResult"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/searchButton"
                    app:layout_constraintTop_toBottomOf="@+id/searchButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/popout_menu"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/movie_popout_header"
            app:menu="@menu/movie_search_actions"/>

    </androidx.drawerlayout.widget.DrawerLayout>


</LinearLayout>